<resources>
    <string name="app_name">CLOCA Conservation Areas</string>
    <string name="title">CLOCA Conservation Areas</string>
    <string name="search_button">SEARCH</string>
    <string name="about_button">ABOUT</string>
    <string name="contact_us_button">CONTACT US</string>
    <string name="main_tagline"><i>Durham Region\'s source for Conservation Area information.</i></string>
    <string name="submenu_help">HELP</string>
    <string name="submenu_options">OPTIONS</string>
    <string name="search_title">WHERE WOULD YOU LIKE TO SEARCH?</string>
    <string name="album_name">CLOCA</string>
    <string name="cannot">Cannot</string>
    <string name="category_info">""</string>
    <string name="cons_general"><b>"We\'d love to see your pictures of our Conservation Area\'s. Please note that all images submitted become the property of the Central Lake Ontario Conservation Authority. For additional information, please see our <a href="http://www.cloca.com">disclaimer</a>."</b></string>
    <string name="species_sighting"><b>"Did you see something interesting in one of our watersheds or Conservation Areas?  We’d love to hear about it.  Send us a photo with the name of the animal in the comments section and we’ll add it to our database.  We might even use your photo in one of our publications!  (If you weren’t able to capture a photo don’t worry, you can still tell us what you saw by filling out the comment section and hitting send.)."</b></string>
    <string name="fish_concerns"><b>Spawning surveys occur in both the spring and fall. Chinook Salmon are common in the fall and Rainbow Trout and White Sucker in the spring. Reports on quantity, location, and barriers to migration help with the long-term management of these species. Please indicate the approximate number of fish and the species, if known. If any barriers to migration are observed please include this information in the comments section with an attached picture. </b></string>
    <string name="cons_area_concerns"><b>Although our staff conduct trail assessments and routinely service our Conservation Areas, we rely on the assistance of our visitors to keep our Areas safe and clean. We invite our visitors to report any safety issues or property damage including fallen trees, damaged trail, missing signs, graffiti, garbage dumping, off trail activities, or inappropriate conduct. Please include the Conservation Area name, trail name, and any other nearby feature </b></string>
    <string name="flood_concerns"><b>Help the CLOCA Water Monitoring and Flood Forecasting and Warning team by submitting daily rainfall accumulation (rain gauges are available from CLOCA), or by submitting photographs and reports of flooding streams or roadways, ice jams and debris jams.</b></string>
    <string name="search_clarington"><b>CLARINGTON</b></string>
    <string name="search_oshawa"><b>OSHAWA</b></string>
    <string name="search_scugog"><b>SCUGOG</b></string>
    <string name="search_whitby"><b>WHITBY</b></string>
    <string name="search_other_areas"><b>OTHER AREAS</b></string>
    <string name="report_button">SEND A REPORT</string>
    <string name="report_title">Send a report to CLOCA.</string>
    <string name="species_report">Wildlife Sightings.</string>
    <string name="hazard_report">Conservation Areas Concerns.</string>
    <string name="CA_general_report">Conservation Areas General Photo\'s.</string>
    <string name="flood_report">Flooding.</string>
    <string name="fish_report">Fish sightings and concerns.</string>
    <string name="image_3">A picture of something</string>
    <string name="image_2">A picture of something</string>
    <string name="image_1">A picture of something</string>
    <string name="parking">Parking Passes - Click Here!</string>
    <string name="selectpicture">Select a Picture</string>
    <string name="takepicture">Take a Picture</string>
    <string name="takevid">Take a video</string>
    <string name="sendreport">Send Report</string>
    <string name="description_hint">Enter any additional information here.</string>
    <string name="loc_txt"></string>
    <string name="clarington_description">
        Clarington is situated in the eastern part of CLOCA\'s jurisdiction and 
        houses four publicly accessible Conservation Areas (CA).
    </string>
    <string name="clarington_title">Clarington</string>
    <string name="whitby_description">
        Whitby is located in the western portion of CLOCA\'s jurisdiction and houses two publicly accessible Conservation Areas (CA).
    </string>
    <string name="oshawa_description">
        Oshawa is located centrally within CLOCA\'s jurisdiction and houses one publicly accessible Conservation Area (CA).
        </string>
    <string name="about_title">ABOUT</string>
    <string name="about_summary">This application was designed and built by the Central Lake
        Ontario Conservation Authority and has been built for informational purposes.
        \n
      Central Lake Ontario Conservation Authority was established in 1958. Our mandate 
      is to establish and undertake programs to promote the conservation, restoration, 
      development and management of natural resources in partnership with local 
      Municipalities and the Province. 
      \n
      The Authority\'s jurisdiction consists of 627 square kilometres and is defined as 
      the areas drained by the above fifteen watersheds.
      \n
      Municipalities located within the jurisdiction, all or in part, include: Cities of Oshawa and Pickering, 
      Towns of Ajax and Whitby, Municipality of Clarington, Townships of Scugog and Uxbridge. 
        </string>
    <string name="about_header">ABOUT</string>
    <string name="contact_title"><b>CONTACT US</b></string>
    <string name="contact_name_title"><b>Contact Information:</b></string>
    <string name="contact_name_description">For additional information regarding this application or CLOCA please contact:</string>
    <string name="contact_name_1"> Central Lake Ontario Conservation Authority - Head Office</string>
    <string name="contact_phone_1">Phone:(905) 579-0411</string>
    <string name="contact_email_1">e-mail: mail@cloca.com</string>
    <string name="get_involved_title"><i>Get Involved!</i></string>
    <string name="get_involved_text">
        CLOCA offers a range of volunteer experiences to families, 
        high school students, retired professionals and people looking to create a 
        healthier planet.
        \n
        \n
        Volunteer opportunities include conservation area management, 
        photography, creek cleanups, trail construction and repair, tree planting 
        and habitat creation, monitoring wildlife and water quality, community outreach 
        at public events like Purple Woods Maple Syrup Festival and assistance with 
        education programs like our Durham Children\'s Groundwater Festival.
        \n
		\n
		Visit the volunteer section of our website (www.cloca.com/volunteer/index.php) to 
		find out about current volunteer opportunities.
	</string>
    <string name="directions_title">Directions:</string>
    <string name="description_title">DESCRIPTION:</string>
    <string name="heberdown_title">HEBER DOWN CA</string>
    <string name="heberdown_directions">
        Exit 401 at Brock St. in Whitby. Take Taunton Rd. LEFT from Brock St. 
        to Country Lane Rd. Go RIGHT on Country Lane Rd. and travel north to the main 
        entrance. Enter through the main gate and follow the road to the day-use parking 
        lot. 
        </string>
    <string name="heberdown_description">
        The Heber Down Conservation Area 
        (284 hectares) offers a variety of activities for the recreation-minded. 
        Group camping, fishing, nature walks, and picnicking are all popular 
        activities that can be carried out just a short distance from home. 
        More importantly, Heber Down Conservation Area preserves a portion of 
        the significant Iroquois Beach physiographic unit. 
        \n
        \n
       	The natural valley of the Lynde Creek bisects a portion of this Conservation 
        Area and provides many scenic vistas for those enjoying some of the 5 km of 
        flat to gently sloped trail that runs through this property. 
        \n
        \n
     	Springs and seeps within the provincially significant Heber Down Wetland Complex 
        provide important groundwater recharge to this branch of the Lynde Creek Watershed. 
        This wetland complex also provides specialized habitat for many wildlife species 
        that depend on large treed wetland areas in order to carry out their breeding 
        and feeding activities. 
     </string>
    <string name="heberdown_hikingtext">The different trail types at Heber Down Conservation Area means there should be one for everyone. From stroller and wheelchair-friendly trails and trails with plenty of boardwalk and stairs, to longer hiking trails, visitors are bound to find a favourite. </string>
    <string name="heberdown_picnickingtext">There are several excellent locations to have a picnic within this Conservation Area. Open and sheltered picnic areas are available for events such as weddings, family picnics and corporate events.</string>
    <string name="heberdown_educationtext">The Central Lake Ontario Conservation Authority can arrange to run school programs at Heber Down Conservation Area.</string>
    <string name="help_title"><i>HELP</i></string>
    <string name="help_text_description">
            This application was developed by the Central Lake Ontario Conservation Authority (CLOCA)
            for informational purposes. Users will be able to search through all CLOCA owned Conservation Areas
            and view the permitted activities at each site.
        </string>
    <string name="search_help">
            The SEARCH function allows you to find a Conservation Area based on the municipality in which it resides.
            There is also the option to search "Other Areas" which listed the non-public areas within
            CLOCA\'s jurisdiction.            
        </string>
    <string name="map_help">
            The MAP page displays a mapping application initially centred on the Conservation
            Area the user is viewing. Trail data is shown as dashed black lines. Standard mobile map applications functions, such as
            "Pinch" and "Tap", allow for navigation. The tab buttons at the bottom of the screen allow the user
            to switch between the MAP, LOCATION SERVICES and ACTIVITIES views. Pressing the "Back" button
            on the mobile device will take the user back to the Conservation Area description page.
            If the map fails to draw, press the back button on your device and reload the map. If the trail
            information does not load on the map, pan or zoom on the map to load the data.
            
        </string>
    <string name="activities_help">
            The ACTIVITIES page displays the activities which can be completed at the correspnding
            Conservation Area. Each activity is given a description outlining any other
            regulations or opportunities.
            
        </string>
    <string name="location_help">
            The "FIND ME" button, found within the MAP page, displays the users current location based on the 
            GPS with the Android device. As it stands, this will simply display the latitude and longitude coordinates of the users.
            For future development this functionality is to be incorporated into the mapping application.
            If the device being used does not have contain GPS functionality then an error message will
            appear.
            
        </string>
</resources>