<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        >
        <TextView
        android:id="@+id/search_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/search_title"
        android:textSize="20dp"
        android:textStyle="bold" 
        android:gravity="center"
        android:background="@drawable/ca_title_header"
        android:textColor="#FFFFFF"
        />
    </LinearLayout>
   <ScrollView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       >      
	<TableLayout
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:gravity="center"
	   >

       <TableRow 
           android:gravity="center" 
           >

	    
	<LinearLayout 
	    android:id="@+id/search_button_layout"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="5dp"
        android:layout_column="2"
	    >
            <Button
             android:id="@+id/clarington_button"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/search_clarington"
             />
            <Button
             android:id="@+id/oshawa_button"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/search_oshawa"
             />
            <Button
             android:id="@+id/scugog_button"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/search_scugog"
             />
            <Button
             android:id="@+id/whitby_button"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/search_whitby"
             />
            <Button
             android:id="@+id/other_button"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/search_other_areas"
             />
            <ImageView
            android:id="@+id/parkingpassimage"
            android:layout_width="175dp"
            android:layout_height="125dp"
            android:contentDescription="@string/parking"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:src="@drawable/parkingpasstext"
            />
            </LinearLayout>
            
            </TableRow>
            </TableLayout>
            </ScrollView>
            
	    

</LinearLayout>