<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contact_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background"
    >
<LinearLayout
	    android:id="@+id/contact_sublayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_gravity="center"
	    android:orientation="vertical"
	    android:padding="5dp"
	    >
    <TextView
            android:id="@+id/contactus_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_title"
            android:gravity="center"
            android:textSize="20dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/ca_title_header"
            />
</LinearLayout>
   <ScrollView
       android:id="@+id/contact_scrollview"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       > 
      <LinearLayout 
        android:id="@+id/contact_sublayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        > 
        <TextView
          android:id="@+id/get_involved_title"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textStyle="bold"
          android:paddingTop="10dp"
          android:textColor="#8B3D36"
          android:text="@string/get_involved_title"
          />
     <TextView
          android:id="@+id/get_involved_text"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:autoLink="web"
		  android:gravity="left"	
          android:paddingTop="10dp"
          android:paddingBottom="10dp"
          android:text="@string/get_involved_text"
          android:textSize="15dp" />
     <ImageView 
            android:id="@+id/get_involved_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ca_image_border"
            android:layout_gravity="center"
            android:padding="2dp"
            android:src="@drawable/volunteer_image"
            />
    <TextView
          android:id="@+id/contact_name_title"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:textSize="20dp"
          android:textStyle="bold"
          android:paddingTop="10dp"
          android:textColor="#8B3D36"
          android:text="@string/contact_name_title"
          /> 
     <TextView
         android:id="@+id/contact_name_description"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="15dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:text="@string/contact_name_description"
        />
     <TextView
        	android:id="@+id/contact_name_1"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/contact_name_1"
        	android:textSize="15dp"
        	android:paddingTop="10dp"
        	android:layout_gravity="center"
        	android:textStyle="bold" />
            
      <TextView
            android:id="@+id/contact_phone_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:autoLink="phone"
            android:gravity="center"
            android:text="@string/contact_phone_1"
            />
      <TextView
            android:id="@+id/contact_email_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:autoLink="email"
            android:gravity="center"
            android:text="@string/contact_email_1"
            />
	<ImageButton
	    android:id="@+id/contact_cancel_button"
	    android:layout_width="65dp"
	    android:layout_height="wrap_content"
		android:src="@drawable/home_tab"
	    android:layout_gravity="right"
	    android:textStyle="bold"
	    />
 </LinearLayout> 
 </ScrollView>
</LinearLayout>