<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/help_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/home_background">
    
   	<ScrollView
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    >
 	    <LinearLayout 
 	        android:id="@+id/help_scrollview"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:paddingLeft="5dp"
        	android:paddingRight="5dp"
 	        >
        <TextView 
            android:id="@+id/help_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_title"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/white"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:background="@drawable/activities_title_header"

            />
        <TextView
            android:id="@+id/help_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_text_description"
            android:gravity="left"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />
        <TextView
            android:id="@+id/search_help_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Search"
            style="@style/table_title_style"
            android:background="@drawable/activities_title_header"
            />
        
        <TextView
            android:id="@+id/search_help"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/search_help"
            />
       <TextView
            android:id="@+id/activites_help_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Activities"
            style="@style/table_title_style"
            android:background="@drawable/activities_title_header"
            />
        
        <TextView
            android:id="@+id/activites_help"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/activities_help"
            />
        
        <TextView
            android:id="@+id/map_help_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Map"
            style="@style/table_title_style"
            android:background="@drawable/activities_title_header"
            />
        
        <TextView
            android:id="@+id/map_help"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/map_help"
            />
        
        <TextView
            android:id="@+id/location_help_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Find Me"
            style="@style/table_title_style"
            android:background="@drawable/activities_title_header"
            />
        
        <TextView
            android:id="@+id/location_help"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/location_help"
            />
        
        </LinearLayout>
        </ScrollView>
        
        
   	    
        
    </LinearLayout>